--- a/_config.yml
+++ b/_config.yml
@@ -2,25 +2,14 @@ title:            Site Title
 description:      Describe your website here.
 disqus_shortname: 
 #Comment out url when working locally to resolve base urls correctly
-url:              http://localhost:4000
+url:              www.lucces.tk
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Ming can
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
-  # Social networking links used in footer. Update and remove as you like.
-  twitter:        
-  facebook:       
-  github:         
-  stackexchange:  
-  linkedin:       
-  instagram:      
-  flickr:         
-  tumblr:         
-  # For Google Authorship https://plus.google.com/authorship
-  google_plus:   
+ 
 
 # Background image to be tiled on all pages
 background: ps_neutral.png
