--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Site Title
+title:            Mingcan's Blog
 description:      Describe your website here.
 disqus_shortname: 
 #Comment out url when working locally to resolve base urls correctly
