--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title:            Mingcan's Blog
-description:      Describe your website here.
-disqus_shortname: 
+description:      This is my blog,my name is Mingcan.
 #Comment out url when working locally to resolve base urls correctly
 url:              http://www.lucces.tk
 
