--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Mingcan's Blog
 description:      This is my blog,my name is Mingcan.
 #Comment out url when working locally to resolve base urls correctly
-url:              http://www.lucces.tk
+url:              http://mingcanit.tk
 
 # Owner/author information
 owner:
