--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url:              http://mingcanit.tk
 owner:
   name:           Ming can
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
+  bio:            "Hello everybody,I'm Mingcan,if you want to know me more you can fllow me on twitter and facebook and github!"
  
 
 # Background image to be tiled on all pages
