--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ background: ps_neutral.png
 google_analytics:   
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
+
 bing_verify:         
 
 # Links to include in top navigation
@@ -28,7 +29,7 @@ links:
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Asia/Shanghai
 future:      true
 pygments:    true
 markdown:    kramdown
