--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ links:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Asia/Shanghai
 future:      true
-pygments:    true
-markdown:    kramdown
+#pygments:    true
+#markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title
